@@ -1,4 +1,9 @@
 
+2017-01-05  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* screenio.c (field_accept): don't write anything on the screen for
+	  ACCEPT OMITTED
+
 2017-01-02  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* coblocal.h, common.h: move (cob_get_current_date_and_time) and
